[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-rt = "2.9.0"
actix-web = "4.5.1"
chrono = "0.4.34"
diesel = "2.1.4"
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.2"
lazy_static = "1.4.0"
listenfd = "1.0.1"
r2d2 = "0.8.10"
serde = "1.0.197"
serde_json = "1.0.114"
uuid = "1.7.0"
